Finished Responsive Navbar
- Navbar is now more responsive than before. Added more divs to normalise the situation
- Added new subhero div for the content inside hero
- added some style elements to p, h1, h2

--- a/style.css
+++ b/style.css
@@ -1,50 +1,72 @@
+html {
+    font-size: 100%;
+}
+
 body {
     margin: 0;
-    font-family: 'robotoregular'
+    font-family: 'robotoregular';
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    margin: 0;
+}
+
+h2 {
+    font-size: 1.5rem;
 }
 
 .hero {
     background-color: #1F2937;
-    margin: 0px;
-    color: whitesmoke;
-    padding: 20px;
-    align-items: center;
-}
-
-.hero .upper {
+    color: aliceblue;
+    gap: 2rem;
     display: flex;
-    align-items: center;
-    justify-content:space-around;
-}
-
-.hero .headline {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.hl_text {
-    flex: 1 1 100%;
-}
-
-.hl_text h1 {
-    font-family: 'robotobold';
-}
-
-.hl_img {
-    flex: 1 1 100%;
-    width: 100px;
-    background-color: grey;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 10rem;
 }
 
 .hero ul {
-    display: flex;
-    list-style-type: none;
     margin: 0;
-    gap: 20px;
+    padding: 0;
+    display: flex;
+    gap: 1rem ;
+    list-style-type: none;
+    font-size: 1.3rem;
 }
 
-.title {
-    font-family: 'robotomedium';
-    font-size: 28px;
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+
 }
+
+.subhero {
+    display: flex;
+}
+
+.contentleft {
+    
+}
+
+
+
+.title {
+    font-size: 4rem;
+    flex: content;
+}
+
+.footer {
+}
+
+.placeholderimg {
+    background-color: beige;
+}
+
