--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@ body {
     margin: 0;
     font-family: 'robotoregular';
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
 }
 
 h1 {
@@ -19,16 +16,18 @@ h1 {
 
 h2 {
     font-size: 1.5rem;
+    margin: 0;
 }
 
 .hero {
     background-color: #1F2937;
     color: aliceblue;
-    gap: 2rem;
+    gap: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 10rem;
+    padding: 0 15rem;
+    padding-bottom: 1rem;
 }
 
 .hero ul {
@@ -45,18 +44,38 @@ h2 {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-
 }
 
 .subhero {
     display: flex;
+    align-items: stretch;
+    padding: 0;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .contentleft {
-    
+    flex: 1 1 40%;
+    padding-right: 2rem;
+}
+
+.contentright {
+    flex: 1 1 40%;
+    background-color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
+button {
+    background-color: #3882F6;
+    border: 0;
+    border-radius: 5px;
+    padding: 0.5rem 0.8rem;
+    color: white;
+    font-family: 'robotobold';
+}
 
 .title {
     font-size: 4rem;
@@ -66,7 +85,5 @@ h2 {
 .footer {
 }
 
-.placeholderimg {
-    background-color: beige;
-}
+
 
