--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     margin: 0;
     font-family: 'robotoregular';
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 h1 {
@@ -26,7 +29,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 15rem;
+    padding: 0 15%;
     padding-bottom: 1rem;
 }
 
@@ -67,7 +70,6 @@ h2 {
     justify-content: center;
 }
 
-
 button {
     background-color: #3882F6;
     border: 0;
@@ -82,7 +84,47 @@ button {
     flex: content;
 }
 
+.container1 {
+    margin: 2rem;
+    text-align: center;
+}
+
+.container2 {
+    background-color: #E5E7EB;
+    padding: 5rem 20%;
+    font-size: 36px;
+    font-family: 'robotoitalic';
+}
+
+.cubeholder {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.cube {
+    width: 10rem;
+    height: 10rem;
+    border-style: solid;
+    border-color: #3882F6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+.content {
+    padding-bottom: 2rem;
+}
+
 .footer {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
