--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    
+}
+
+p {
+    margin: 0rem;
 }
 
 h1 {
@@ -20,6 +25,12 @@ h1 {
 h2 {
     font-size: 1.5rem;
     margin: 0;
+}
+
+h4 {
+    font-size: 1.2rem;
+    margin: 0;
+    font-family: 'roboto';
 }
 
 .hero {
@@ -72,11 +83,14 @@ h2 {
 
 button {
     background-color: #3882F6;
-    border: 0;
+    border-style: solid;
     border-radius: 5px;
     padding: 0.5rem 0.8rem;
     color: white;
     font-family: 'robotobold';
+    border-color: white;
+    width: max-content;
+    margin: 1rem 0rem;
 }
 
 .title {
@@ -85,15 +99,47 @@ button {
 }
 
 .container1 {
-    margin: 2rem;
+    margin: 3rem;
     text-align: center;
 }
 
 .container2 {
     background-color: #E5E7EB;
-    padding: 5rem 20%;
+    padding: 6rem 20%;
     font-size: 36px;
     font-family: 'robotoitalic';
+    color: darkgrey;
+}
+
+.container3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calltoaction {
+    margin: 3rem;
+    background-color: #3882F6;
+    border-radius: 1rem;
+    color: white;
+    padding: 1rem;   
+}
+
+.calltoaction ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+    margin: 2rem 3rem;
+
+}
+
+
+.quote {
+    text-align: end;
+    font-style: "robotoitalic";
+    color: black;
 }
 
 .cubeholder {
@@ -116,7 +162,9 @@ button {
 }
 
 .content {
-    padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 .footer {
@@ -124,7 +172,9 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    color: white;
+    padding: 1rem;
+    margin: 0;
 }
 
 
